Update spec and generated code
