# todoApp/servers/aspnet/generated/controllers/AttachmentsOperationsControllerBase.cs
@@ -22,7 +22,7 @@ namespace Todo.Service.Controllers
 
         [HttpGet]
         [Route("/items/{itemId}/attachments")]
-        [ProducesResponseType((int)HttpStatusCode.OK, Type = typeof(Placeholder))]
+        [ProducesResponseType((int)HttpStatusCode.OK, Type = typeof(TodoAttachmentList))]
         public virtual async Task<IActionResult> List(long itemId)
         {
             var result = await AttachmentsOperationsImpl.ListAsync(itemId);
@@ -33,9 +33,9 @@ namespace Todo.Service.Controllers
         [HttpPost]
         [Route("/items/{itemId}/attachments")]
         [ProducesResponseType((int)HttpStatusCode.NoContent, Type = typeof(void))]
-        public virtual async Task<IActionResult> CreateJsonAttachment([FromHeader(Name = "Content-Type")] string contentType = "application/json", long itemId, TodoAttachment body)
+        public virtual async Task<IActionResult> CreateUrlAttachment([FromHeader(Name = "Content-Type")] string contentType = "application/json", long itemId, TodoAttachment body)
         {
-            await AttachmentsOperationsImpl.CreateJsonAttachmentAsync(contentType, itemId, body);
+            await AttachmentsOperationsImpl.CreateUrlAttachmentAsync(contentType, itemId, body);
             return Ok();
         }
 
